infra/k8s/auth-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-postgres-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-postgres
  template:
    metadata:
      labels:
        app: auth-postgres
    spec:
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: auth-postgress-storage
      volumes:
        - name: auth-postgress-storage
          persistentVolumeClaim:
            claimName: auth-postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: auth-postgres-srv
spec:
  selector:
    app: auth-postgres
  ports:
    - name: auth-postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
