infra/k8s/nats.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
      - name: nats
        image: nats:2.10.12-alpine3.19  # Use the official NATS image from Docker Hub
        ports:
        - containerPort: 4222  # Default NATS client port
        - containerPort: 6222  # Default NATS route port
        - containerPort: 8222  # Default NATS monitoring port
---
apiVersion: v1
kind: Service
metadata:
  name: nats-srv
spec:
  selector:
    app: nats
  ports:
    - name: client
      port: 4222
      targetPort: 4222
    - name: route
      port: 6222
      targetPort: 6222
    - name: monitor
      port: 8222
      targetPort: 8222
