infra/k8s/pact-broker.yaml
apiVersion: v1
kind: Service
metadata:
  name: pact-broker-srv
spec:
  ports:
  - port: 3001
    targetPort: 9292
  selector:
    app: pact-broker

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pact-broker-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pact-broker
  template:
    metadata:
      labels:
        app: pact-broker
    spec:
      containers:
      - name: pact-broker
        image: pactfoundation/pact-broker
        ports:
        - containerPort: 9292
