infra/k8s/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: web-shop.dev
      http:
        paths:
          - path: /api/auth/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-srv
                port:
                  number: 3001
          - path: /api/account/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: account-srv
                port:
                  number: 3001
    - host: my-pact-broker.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pact-broker-srv
                port:
                  number: 3001
          - path: /api/account/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: account-srv
                port:
                  number: 3001
